--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     
     "strictPropertyInitialization": false, 
     
-     "baseUrl": "./src",                       
+     "baseUrl": "./src",   
+     "allowJs": true,                    
      "paths": {
        "@modules/*": ["modules/*"],
        "@config/*": ["config/*"],
